<resources>
    <string name="app_name">Tamagotchi</string>
    <string name="settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="shop">Shop</string>
    <string name="restart">Restart</string>
    <string name="language">Language</string>
    <string name="volume">Volume</string>
    <string name="notification">Notification</string>
    <string name="select_pet">Select Pet</string>
    <string name="faq">FAQ</string>
    <string name="tutorial">Tutorial</string>
    <string name="nutrition">Nutrition</string>
    <string name="bathing">Bathing</string>
    <string name="sleeping">Sleeping</string>
    <string name="playing">Playing</string>
    <string name="strolling">Strolling</string>
    <string name="make_music">Make Music</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="communicate">Communicate</string>
    <string name="send_gift">Send Gift</string>
    <string name="have_fun">Have Fun</string>
    <string name="mood_level">Mood Level</string>
    <string name="health_level">Health Level</string>
    <string name="hunger_level">Hunger Level</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="try_the_game">Try TamaTamagotchi ;-)</string>
    <string name="create">Create</string>
    <string name="faq1">How can I feed my Pet?\n\n
        On the right side of the screen is a menu, there
        you can find all the icons with which you can feed your pet, wash it or play with it.
        You can make music with your pet, take it for a walk or get it to bed.</string>
    <string name="faq2">
        How can I rename my pet?\n\n
        When you create a new pet, you can give it a name. To create a new pet, go to Settings and select Restart.
        Your old pet will be deleted, you can only have one pet at a time.</string>
    <string name="faq3">
        Where can I see the Mood Level?\n\n
        You find the Mood Level on the bottom side of your screen. If the battery is green, everything is fine.
        If its yellow or red, you should feed your pet, play with it or send it to bed.</string>
    <string name="faq4">
        How can I connect with a friend?\n\n
        When you select Connection on the upper side of your screen, your smartphone will turn on Bluetooth
        and then connect to another device, if it also has the app and is near you.</string>
    <string name="faq5">
        Can my pet die?\n\n
        No, your pet can\'t die. But make sure that it is happy, otherwise it will get very sad!</string>
    <string name="faq6">
        What can I do with my Tamagotchi friend when the smartphones are connected?\n\n
        You can send your friend gifts, play with him, communicate and even make a baby.</string>
    <string name="faq7">
        How do I make a baby?\n\n
        If you are connected with a friend, you can tap on the pacifier in the menu on the right side
        of your screen.
        One of the pets has to be female and the other one male. The owner of the female pet will
        get a new baby pet.
        The gender of the baby will be random and you can choose a name for it.
        The old pet will disappear, because you can only own one pet at the same time.</string>

    <!-- HUNGER stuff -->
    <string name="notification_hunger">Hunger!</string>
    <string name="hunger_full">I am full!</string>
    <string name="hunger_empty">Please feed me!</string>
    <string name="hunger_critical">I am hungry!</string>

    <!-- Language -->
    <string name="german">German</string>
    <string name="english">English</string>

    <!-- Battery -->
    <string name="low_battery">Low Battery</string>
    <string name="battery_low_1">Your pet will go sleeping due to low battery.</string>
    <string name="battery_low_2">To enjoy the game even longer load your phone.</string>

    <!-- Exceptions -->
    <string name="uncaught_exception_info">An uncaught Exception occurred, but your game data has been saved.</string>

    <!-- Gender -->
    <string name="female">Female</string>
    <string name="male">Male</string>

    <!-- Pet creation -->
    <string name="pet_creation_name_not_valid">Your pet needs an awesome name.</string>

    <!-- Pets -->
    <string name="pet_squid">Squid</string>
    <string name="pet_bubblegum">Bubblegum</string>

    <!-- Multiplayer -->
    <string name="gift_received">Gift received</string>
</resources>