<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PetCreationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/name_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:paddingTop="30dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="50dp">
            <CheckBox
                android:id="@+id/female_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:paddingRight="30dp" />

            <CheckBox
                android:id="@+id/male_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_pet"
            android:paddingBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingRight="50dp">
                <ImageView
                    android:id="@+id/pet_squid_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pet_squid"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/pet_squid_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_squid"
                    android:paddingRight="30dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/pet_bubblegum_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pet_bubblegum"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/pet_bubblegum_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_bubblegum" />
            </LinearLayout>
        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginBottom="@dimen/button_separator"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:roundedCorners="true" />
    </LinearLayout>
</FrameLayout>