<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MultiPlayerInteractionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/communication_button"
            android:layout_width="@dimen/side_button_width"
            android:layout_height="@dimen/side_button_height"
            android:src="@drawable/friend_icon"
            android:tooltipText="@string/communicate"
            app:bootstrapSize="md"
            app:hasBorder="false" />

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/playing_button"
            android:layout_width="@dimen/side_button_width"
            android:layout_height="@dimen/side_button_height"
            app:bootstrapSize="md"
            app:hasBorder="false"
            android:src="@drawable/ball_icon_colour"
            android:tooltipText="@string/playing" />

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/send_gift_button"
            android:layout_width="@dimen/side_button_width"
            android:layout_height="@dimen/side_button_height"
            app:bootstrapSize="md"
            app:hasBorder="false"
            android:src="@drawable/gift_icon_colour"
            android:tooltipText="@string/send_gift" />

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/have_fun_button"
            android:layout_width="@dimen/side_button_width"
            android:layout_height="@dimen/side_button_height"
            app:bootstrapSize="md"
            app:hasBorder="false"
            android:src="@drawable/pacifier_icon"
            android:tooltipText="@string/have_fun" />
    </LinearLayout>
</FrameLayout>