<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MoodMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/health_level_indicator"
            android:layout_width="@dimen/side_button_width"
            android:layout_height="@dimen/side_button_height"
            android:src="@drawable/googleg_disabled_color_18"
            android:tooltipText="@string/health_level"
            app:bootstrapSize="md"
            app:hasBorder="false"
            android:layout_marginRight="10dp" />

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/mood_level_indicator"
            android:layout_width="@dimen/side_button_width"
            android:layout_height="@dimen/side_button_height"
            app:bootstrapSize="md"
            app:hasBorder="false"
            android:src="@drawable/googleg_disabled_color_18"
            android:tooltipText="@string/mood_level"
            android:layout_marginRight="10dp" />

        <com.beardedhen.androidbootstrap.BootstrapThumbnail
            android:id="@+id/hunger_level_indicator"
            android:layout_width="@dimen/side_button_width"
            android:layout_height="@dimen/side_button_height"
            app:bootstrapSize="md"
            app:hasBorder="false"
            android:src="@drawable/googleg_disabled_color_18"
            android:tooltipText="@string/hunger_level"
            android:layout_marginRight="10dp" />
    </LinearLayout>
</FrameLayout>